--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "boxen": "^8.0.1",
     "chalk": "^5.6.2",
     "figlet": "^1.9.3",
+    "fs-extra": "^11.3.2",
     "gradient-string": "^3.0.0",
     "inquirer": "^12.10.0",
     "ora": "^9.0.0",
@@ -26,6 +28,7 @@
   },
   "devDependencies": {
     "@types/figlet": "^1.7.0",
+    "@types/fs-extra": "^11.0.4",
     "@types/inquirer": "^9.0.9",
     "@types/node": "^24.9.2",
     "@types/shelljs": "^0.8.17",
